--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Biografía</title>
+</head>
+<body>
+    <h1>Mi Biografía</h1>
+    <p>Hola, soy Brenda. Bienvenida a mi sitio web personal alojado en GitHub Pages.</p>
+</body>
+</html>
 
-# Mi Biografía
-
-¡Hola! 👋  
-Soy **[Tu Nombre]**, un apasionado de la tecnología, el desarrollo de software y la innovación.
-
-## Acerca de mí
-
-- 🌱 Actualmente estoy aprendiendo nuevas tecnologías para proyectos innovadores.
-- 👨‍💻 Me especializo en **[tu área de especialización, e.g., desarrollo web, IoT, etc.]**.
-- 🎯 Mis metas incluyen contribuir a proyectos que marquen una diferencia y compartir mis conocimientos con la comunidad.
-
-## Habilidades
-
-- **Lenguajes**: Python, JavaScript, C, [otros lenguajes...]
-- **Frameworks**: Laravel, React, Django, etc.
-- **Otras herramientas**: Git, Docker, Arduino.
-
-## Proyectos Destacados
-
-1. **[Nombre del Proyecto 1]**  
-   - Breve descripción del proyecto.
-   - [Link al proyecto](https://github.com/tu-usuario/proyecto1)
-
-2. **[Nombre del Proyecto 2]**  
-   - Breve descripción del proyecto.
-   - [Link al proyecto](https://github.com/tu-usuario/proyecto2)
-
-## Contacto
-
-Puedes encontrarme en:  
-- 📧 [Tu correo electrónico]  
-- 💼 [Tu LinkedIn](https://linkedin.com/in/tu-usuario)  
-- 🐦 [Tu Twitter](https://twitter.com/tu-usuario)  
