--- a/index.html
+++ b/index.html
@@ -4,10 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Biografía</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            text-align: center;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 500px;
+            margin: 20px;
+        }
+        img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 20px;
+            border: 3px solid #4CAF50;
+        }
+        h1 {
+            font-size: 24px;
+            margin: 10px 0;
+            color: #4CAF50;
+        }
+        p {
+            font-size: 16px;
+            line-height: 1.5;
+            margin-bottom: 20px;
+        }
+        a {
+            text-decoration: none;
+            color: #4CAF50;
+            font-weight: bold;
+        }
+        a:hover {
+            color: #3a8e41;
+        }
+    </style>
 </head>
 <body>
-    <h1>Mi Biografía</h1>
-    <p>Hola, soy Brenda. Bienvenida a mi sitio web personal alojado en GitHub Pages.</p>
+    <div class="container">
+        <img src="https://via.placeholder.com/150" alt="Foto de perfil">
+        <h1>¡Hola! Soy Brenda</h1>
+        <p>
+            Soy una apasionada de la tecnología y el desarrollo de software. Me encanta aprender, crear y colaborar en proyectos que tengan un impacto positivo en el mundo. 
+            Disfruto trabajar en proyectos de programación y explorar nuevas herramientas y tecnologías.
+        </p>
+        <p>
+            Si quieres conocer más sobre mí, no dudes en <a href="#contacto">contactarme</a>.
+        </p>
+    </div>
 </body>
 </html>
-
