--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/150" alt="Foto de perfil">
+     <img src="img/foto.jpg" alt="Foto de perfil">
+
         <h1>¡Hola! Soy Brenda</h1>
         <p>
             Soy una apasionada de la tecnología y el desarrollo de software. Me encanta aprender, crear y colaborar en proyectos que tengan un impacto positivo en el mundo. 
