--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Disfruto trabajar en proyectos de programación y explorar nuevas herramientas y tecnologías.
         </p>
         <p>
-            Si quieres conocer más sobre mí, no dudes en <a href="#contacto">contactarme</a>.
+            mi perfil en GitHub es  <a href="">Brendagh6</a>.
         </p>
     </div>
 </body>
