--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <div class="container">
      <img src="img/foto.jpg" alt="Foto de perfil">
 
-        <h1>¡Hola! Soy Brenda</h1>
+        <h1> Brenda Veranea </h1>
         <p>
-            Soy una apasionada de la tecnología y el desarrollo de software. Me encanta aprender, crear y colaborar en proyectos que tengan un impacto positivo en el mundo. 
-            Disfruto trabajar en proyectos de programación y explorar nuevas herramientas y tecnologías.
+            Soy estuiante de la Universidad Tecnologica del Valle de Tuluca, actualmente estoy estudiando la carrea de Desarrollo de Software Multiplataforma.
+            Me gusta el desarrollo de software ya que puedo crear, diseñar y estructurar proyectos .
         </p>
         <p>
-            mi perfil en GitHub es  <a href="">Brendagh6</a>.
+            mi perfil en GitHub es  <a href="https://github.com/Brendagh6">Brendagh6</a>.
         </p>
     </div>
 </body>
